kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: dev
  labels:
    owner: devteam
