kubernetes/pod5-http-apple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
  - name: apple-app
    image: hashicorp/http-echo
    args:
      - "-text=apple"
    ports:
    - containerPort:  5678
      name:  http
