kubernetes/pod6-quota.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-quota
spec:
  containers:
  - name: nginx-quota
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
