kubernetes/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: brian-nginx
  namespace: brian
spec:
  selector:
    app: nginx
  ports:
  - port: 80
