kubernetes/service.yaml
# POD
kind: Pod
apiVersion: v1
metadata:
  name: apple-pod
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---
# SERVICE
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678
